WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144199
Crash if IDBTransaction is aborted right after it's created
https://bugs.webkit.org/show_bug.cgi?id=144199
Summary
Crash if IDBTransaction is aborted right after it's created
Darin Adler
Reported
2015-04-25 16:21:20 PDT
Crash if IDBTransaction is aborted right after it's created
Attachments
Patch
(4.87 KB, patch)
2015-04-25 16:23 PDT
,
Darin Adler
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2015-04-25 16:23:06 PDT
Created
attachment 251652
[details]
Patch
Darin Adler
Comment 2
2015-04-25 16:23:44 PDT
<
rdar://problem/18309730
>
Darin Adler
Comment 3
2015-04-25 16:48:51 PDT
Committed
r183317
: <
http://trac.webkit.org/changeset/183317
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug