Crash if IDBTransaction is aborted right after it's created https://bugs.webkit.org/show_bug.cgi?id=144199

Reviewed by Simon Fraser.

Source/WebCore:

Test: storage/indexeddb/transaction-abort.html

* Modules/indexeddb/IDBTransactionBackend.cpp:
(WebCore::IDBTransactionBackend::IDBTransactionBackend): Don't start the
transaction if it is already complete (has been aborted).

LayoutTests:

* platform/mac-wk2/TestExpectations: Unskip storage/indexeddb/transaction-abort.html.
* storage/indexeddb/transaction-abort-expected.txt: Updated since the exact text of
the execptions is different from what was marked here as expected.

Canonical link: https://commits.webkit.org/162183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183317 268f45cc-cd09-0410-ab3c-d52691b4dbfc